# cloudv-ostf-adapter

./: .gitignore  .gitreview  .testr.conf  HOWTO.rst  README  README.md  README.rst  config.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cloudv_client/: client.py  jobs.py  plugins.py  suites.py
cloudv_ostf_adapter/: config.py  server.py  version.py
cloudv_ostf_adapter/_adapter_app/: app.py
cloudv_ostf_adapter/cloudv_client/: client.py  tests.py
cloudv_ostf_adapter/cmd/: _common.py  cli.py  client.py  cloudv_runner.py  server.py
cloudv_ostf_adapter/common/: cfg.py  exception.py  object_descriptors.py  utils.py
cloudv_ostf_adapter/nose_plugin/: __init__.py  discovery.py  utils.py
cloudv_ostf_adapter/ostf_adapter/: config.py  logger.py  mixins.py  server.py
cloudv_ostf_adapter/storage/: __init__.py  alembic.ini  alembic_cli.py  constants.py  engine.py  models.py
cloudv_ostf_adapter/tests/: _base.py  config.py
cloudv_ostf_adapter/validation_plugin/: __init__.py  base.py
cloudv_ostf_adapter/wsgi/: __init__.py  app.py  controllers.py  root.py
cv_ostf_adapter/: app.py
cv_ostf_adapter/controllers/: root.py
cv_ostf_adapter/db/: __init__.py  alembic.ini  association.py  models.py
cv_ostf_adapter/utils/: __init__.py
doc/source/: conf.py  index.rst
etc/cloudv_ostf_adapter/: cloudv_ostf_adapter.conf  test.conf  test.conf.sample
etc/ostf/: ostf.conf
ostf_adapter/: config.py  logger.py  mixins.py  server.py
ostf_adapter/nose_plugin/: nose_adapter.py  (+3 more)
tests/: config.py  fork_tests.py  test_functional.py  test_units.py
(+41 files in other folders)
