[metadata]
name = cloudv-ostf-adapter
version = 2015.1
summary = CloudValidation OSTF adapter
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    cloudv_ostf_adapter
    cloudv_client

[compile_catalog]
domain = cloudv_ostf_adapter

[entry_points]
console_scripts =
    cloudvalidation-cli = cloudv_ostf_adapter.cmd.cli:main
    cloudvalidation-server = cloudv_ostf_adapter.cmd.server:main
    cloudvalidation = cloudv_client.cmd.client:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
match=^test
where=cloudv_ostf_adapter
nocapture=1
cover-package=cloudv_ostf_adapter
cover-erase=1

[wheel]
universal = 1
